--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!DOCTYPE html> <html lang=en> <head> <meta charset=UTF-8> <title>A element component</title> <link rel=stylesheet href=http://jasonm23.github.io/markdown-css-themes/foghorn.css> <link rel=stylesheet href=https://highlightjs.org/static/demo/styles/rainbow.css> <script src=http://cdnjs.cloudflare.com/ajax/libs/vue/1.0.21/vue.min.js></script> <link href="el-cascader/app.148b4b06.css" rel="stylesheet"></head> <body> <app></app> <script src="el-cascader/app.485bbe27.js"></script></body> </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>A element component</title>
+  <link rel="stylesheet" href="https://rawgit.com/element-component/element-theme-default/master/dist/index.css">
+  <link rel="stylesheet" href="http://jasonm23.github.io/markdown-css-themes/foghorn.css">
+  <link rel="stylesheet" href="https://highlightjs.org/static/demo/styles/rainbow.css">
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/vue/1.0.21/vue.min.js"></script>
+</head>
+<body>
+  <app></app>
+<script src="/el-cascader/main.js"></script></body>
+</html>
